// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Card container variant (default) renders correctly with default props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Card content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#CDCDCD",
      "borderBottomWidth": 1,
      "borderRadius": undefined,
      "borderTopColor": "#CDCDCD",
      "borderTopWidth": 1,
      "display": "flex",
      "flex": undefined,
      "flexDirection": "column",
      "maxWidth": "100%",
      "minWidth": 0,
      "overflow": "hidden",
      "padding": 16,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`Card container variant (default) applies custom padding 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#CDCDCD",
      "borderBottomWidth": 1,
      "borderRadius": undefined,
      "borderTopColor": "#CDCDCD",
      "borderTopWidth": 1,
      "display": "flex",
      "flex": undefined,
      "flexDirection": "column",
      "maxWidth": "100%",
      "minWidth": 0,
      "overflow": "hidden",
      "padding": 48,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`Card container variant (default) applies custom color 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "backgroundColor": undefined,
      "borderBottomColor": "#CDCDCD",
      "borderBottomWidth": 1,
      "borderRadius": undefined,
      "borderTopColor": "#CDCDCD",
      "borderTopWidth": 1,
      "display": "flex",
      "flex": undefined,
      "flexDirection": "column",
      "maxWidth": "100%",
      "minWidth": 0,
      "overflow": "hidden",
      "padding": 16,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`Card container variant (default) passes additional Box props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#CDCDCD",
      "borderBottomWidth": 1,
      "borderRadius": undefined,
      "borderTopColor": "#CDCDCD",
      "borderTopWidth": 1,
      "display": "flex",
      "flex": undefined,
      "flexDirection": "column",
      "gap": 8,
      "marginTop": 16,
      "maxWidth": "100%",
      "minWidth": 0,
      "overflow": "hidden",
      "padding": 16,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`Card display variant renders correctly with required props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Feature Title",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "heading-bold",
                      "fontSize": 20,
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "minWidth": 0,
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "display": "flex",
              "flexDirection": "column",
              "gap": 8,
              "minWidth": 0,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "onPointerEnter": [Function: AsyncFunction],
        "onPointerLeave": [Function: AsyncFunction],
        "style": {
          "display": "flex",
          "flex": 0,
          "flexDirection": "column",
          "gap": 16,
          "minWidth": 0,
          "padding": 16,
          "width": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "alignItems": undefined,
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#CDCDCD",
      "borderBottomWidth": 1,
      "borderLeftColor": "#CDCDCD",
      "borderLeftWidth": 1,
      "borderRadius": 4,
      "borderRightColor": "#CDCDCD",
      "borderRightWidth": 1,
      "borderTopColor": "#CDCDCD",
      "borderTopWidth": 1,
      "display": "flex",
      "flexDirection": "column",
      "gap": 0,
      "maxWidth": "100%",
      "minWidth": 0,
      "overflow": "hidden",
      "padding": 0,
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`Card display variant renders image when imageUri is provided 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "accessibilityLabel": "Test image",
        "resizeMode": "cover",
        "source": {
          "uri": "https://example.com/img.jpg",
        },
        "style": {
          "flexShrink": 0,
          "height": 160,
          "width": "100%",
        },
      },
      "type": "Image",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "My Feature",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "heading-bold",
                      "fontSize": 20,
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "minWidth": 0,
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "display": "flex",
              "flexDirection": "column",
              "gap": 8,
              "minWidth": 0,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "onPointerEnter": [Function: AsyncFunction],
        "onPointerLeave": [Function: AsyncFunction],
        "style": {
          "display": "flex",
          "flex": 0,
          "flexDirection": "column",
          "gap": 16,
          "minWidth": 0,
          "padding": 16,
          "width": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "alignItems": undefined,
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#CDCDCD",
      "borderBottomWidth": 1,
      "borderLeftColor": "#CDCDCD",
      "borderLeftWidth": 1,
      "borderRadius": 4,
      "borderRightColor": "#CDCDCD",
      "borderRightWidth": 1,
      "borderTopColor": "#CDCDCD",
      "borderTopWidth": 1,
      "display": "flex",
      "flexDirection": "column",
      "gap": 0,
      "maxWidth": "100%",
      "minWidth": 0,
      "overflow": "hidden",
      "padding": 0,
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;
